実装を一部修正